# concepts

./: .gitattributes  .gitignore  .travis.yml  CHANGES  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  dev-requirements.txt  pyproject.toml  requirements.txt  run-tests.py  setup.cfg  setup.py  tox.ini  visualize-examples.py
.github/workflows/: build.yaml
concepts/: __init__.py  _common.py  _compat.py  _compat_csv.py  _example.py  algorithms.py  bitmatrix.py  bitsets.py  concepts.py  contexts.py  definitions.py  examples.py  formats.py  graphviz.py  junctors.py  lattice_members.py  lattices.py  lazy_lattice_members.py  lazy_lattices.py  matrices.py  relations.py  tools.py  unicodecsv.py  visualize.py
concepts/algorithms/: __init__.py  _rust.py  common.py  covering_edges.py  fcbo.py  lindig.py
concepts/formats/: __init__.py  base.py  csv_context.py  cxt.py  fimi.py  python_literal.py  table.py  wikitext.py
docs/: Context from pandas DataFrame.ipynb  advanced.rst  api.rst  conf.py  examples.rst  index.rst  manual.rst
examples/: Visualization.ipynb  bob-ross-serialized-lattice.py  bob-ross-serialized.py  bob-ross.cxt  example.json  liveinwater.csv  liveinwater.txt  mushroom.cxt  mushrooms_subset.csv  relations.csv  segments.cxt  vowels.csv
profile/: benchmark.py
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
scripts/: bob-ross.py  bob_ross.py  mushroom-stats.py  mushroom.py  profile-fcbo.py  profile-lindig.py  profile-segments.py
tests/: conftest.py  test_algorithms.py  test_common.py  test_compat_csv.py  test_contexts.py  test_definitions.py  test_examples.py  test_formats.py  test_lattices.py  test_matrices.py  test_serialization.py  test_tools.py
tests/fast/: test_algorithms.py  test_contexts.py  test_definitions.py  test_formats.py  test_matrices.py  test_serialization.py
tests/slow/: test_algorithms_slow.py
