[project]
name = "concepts"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Formal Concept Analysis with Python"
keywords = ["fca", "complete lattice", "graph", "join", "meet", "galois"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  "bitsets~=0.7",
  "graphviz~=0.7",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/xflr6/concepts"
Documentation = "https://concepts.readthedocs.io"
Changelog = "https://concepts.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/concepts/issues"
CI = "https://github.com/xflr6/concepts/actions"
Coverage = "https://codecov.io/gh/xflr6/concepts"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "flake8", "Flake8-pyproject", "pep8-naming", "tox>=3"]
test = ["pytest>=7", "pytest-cov"]
docs = ["sphinx>=5,<7", "sphinx-autodoc-typehints", "sphinx-rtd-theme"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "concepts.__version__" }

[tool.flake8]
exclude = [".tox", "docs", "examples"]
ignore = ["E126", "E128", "E741", "W503"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["README.rst", "docs", "concepts", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[too.coverage.run]
source = ["concepts"]
branch = false

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py{313,312,311,310,39}
  skip_missing_interpreters = true

  [testenv]
  extras = test
  commands = python -X dev run-tests.py {posargs}
"""
