[project]
name = "concepts"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Formal Concept Analysis with Python"
keywords = ["fca", "complete lattice", "graph", "join", "meet", "galois"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["bitsets~=0.7", "graphviz~=0.7"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/xflr6/concepts"
Documentation = "https://concepts.readthedocs.io"
Changelog = "https://concepts.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/concepts/issues"
CI = "https://github.com/xflr6/concepts/actions"
Coverage = "https://app.codecov.io/gh/xflr6/concepts"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "concepts.__version__" }

[dependency-groups]
dev = [  # $ pip install -e . --group dev
  "build", "tox", "twine", "wheel",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme"]
lint = ["flake8", "Flake8-pyproject", "pep8-naming"]
test = ["coverage", "pytest>=8", "pytest-cov"]
typing = ["mypy"]

[tool.mypy]
packages = ["concepts"]

[tool.flake8]
exclude = [".tox", "build", "docs", "examples"]
ignore = ["E126", "E128", "W503", "E741"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["README.rst", "docs", "concepts", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob=*.rst", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["concepts"]
branch = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["python", "-X", "dev", "run-tests.py", { replace = "posargs", extend = true }]]
