[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 5.2
testpaths =
  README.rst
  docs
  concepts
  tests/fast
addopts =
  --doctest-glob='*.rst'
  --doctest-modules --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html

[coverage:run]
source = concepts
branch = false

[flake8]
ignore = E126,E128,E741,W503
max-line-length = 100
exclude = .tox, docs
