[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  README.rst
  docs
  concepts
  tests
addopts =
  --doctest-modules
  --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = concepts
branch = false

[flake8]
ignore = E126,E128,E741,W503
max-line-length = 100
exclude = .tox, docs, examples
